add and testing chart.js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <h1>DZIAŁA</h1>
+<button (click)="DODAJ()">DODAJ</button>
+<button (click)="USUN()">USUN</button>
+<div>
+  <canvas id="canvas">{{ chart }}</canvas>
+</div>
