create and styling nabar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>DZIAŁA</h1>
-<button (click)="DODAJ()">DODAJ</button>
-<button (click)="USUN()">USUN</button>
-<div>
+<main>
+  <app-navbar-vertical></app-navbar-vertical>
+</main>
+
+<!-- <div>
   <canvas id="canvas">{{ chart }}</canvas>
-</div>
+</div> -->
