--- a/src/app/lab2/lab2.component.html
+++ b/src/app/lab2/lab2.component.html
@@ -1,3 +1,4 @@
+<h1>Laboratorium 2</h1>
 <div class="chartBox">
   <canvas id="canvas">{{ chart }}</canvas>
 </div>
@@ -8,7 +9,8 @@
 
 <hr />
 <p>
-  Wykres napięcia od czasu, który otrzymaliśmy z przetwornika
-  analogowo-cyfrowego, do którego wysyłaliśmy sygnał analogowy sterowany przez
-  nas.
+  Wykresy kolejno przedstawiają przemieszczenie i prędkość. Przemieszczenie
+  otrzymujemy z analogowego czujnika przemieszczenia, którego sygnał został
+  przetworzony na postać cyfrową. Prędkość i przyspieszenie otrzymujemy poprzez
+  obliczenie pochodnej przemieszczenia.
 </p>
