add more charts

--- a/src/app/lab2/lab2.component.html
+++ b/src/app/lab2/lab2.component.html
@@ -2,6 +2,12 @@
 <div class="chartBox">
   <canvas id="canvas">{{ chart }}</canvas>
 </div>
+<div class="chartBox">
+  <canvas id="canvas2">{{ chart2 }}</canvas>
+</div>
+<div class="chartBox">
+  <canvas id="canvas3">{{ chart3 }}</canvas>
+</div>
 <div class="buttonBox">
   <button (click)="start()">START</button>
   <button (click)="stop()">STOP</button>
