--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <section [ngSwitch]="ActiveLab">
     <app-lab1 *ngSwitchCase="1" />
     <app-lab2 *ngSwitchCase="2" />
+    <app-lab3 *ngSwitchCase="3" />
   </section>
 </main>
 
