add restert button

--- a/src/app/lab1/lab1.component.html
+++ b/src/app/lab1/lab1.component.html
@@ -4,6 +4,7 @@
 </div>
 <div class="buttonBox">
   <button (click)="start()">START</button>
+  <button (click)="restart()">RESTART</button>
   <button (click)="stop()">STOP</button>
 </div>
 
