--- a/src/app/lab3/lab3.component.html
+++ b/src/app/lab3/lab3.component.html
@@ -21,9 +21,18 @@
 </div>
 
 <hr />
-<p>
-  Wykresy kolejno przedstawiają przemieszczenie i prędkość. Przemieszczenie
-  otrzymujemy z analogowego czujnika przemieszczenia, którego sygnał został
-  przetworzony na postać cyfrową. Prędkość i przyspieszenie otrzymujemy poprzez
-  obliczenie pochodnej przemieszczenia.
-</p>
+<div class="description">
+  <p>Natężenie przepływu możemy określić na kilka sposobów.</p>
+  <ul>
+    <li>Q1 odczytane z miernika przy stanowisku: 12.5</li>
+    <li>
+      Q4 obliczone jako wymnożona prędkość, powierzchnia przekroju rury, oraz
+      czas: 12
+    </li>
+  </ul>
+  <p>
+    Ustalając Q2 = Q1 obliczyliśmy prędkość obrotową [obr/min] poprzez
+    podzielenie natężenia przepływu przez ilość płynu przepchniętego na jeden
+    obrót i otrzymaliśmy 1250
+  </p>
+</div>
