--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -31,7 +31,14 @@ hr {
   height: 0.25svh;
   border: 0px;
 }
+.description {
+  margin-left: 5%;
+}
 p {
   font-size: 20px;
-  margin: 10px 5%;
+  margin: 10px 0%;
+}
+ul {
+  list-style-position: inside;
+  font-size: 20px;
 }
