--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -2,37 +2,50 @@ h1 {
   text-align: center;
   font-size: 60px;
 }
+section {
+  padding-left: 5%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.chartArticle {
+  width: 80%;
+}
+.buttonArticle {
+  width: 19%;
+}
+.descriptionArticle {
+  border-top: 2px solid #fff700;
+  width: 100%;
+}
+
 .chartBox {
   width: 100%;
   height: 70svh;
   display: flex;
   justify-content: center;
 }
+
+.buttonBox {
+  margin-top: 60px;
+  width: 15%;
+  display: flex;
+  flex-wrap: wrap;
+  height: 50svh;
+  position: fixed;
+  justify-content: center;
+  align-content: space-between;
+}
 button {
   background: linear-gradient(#797979, #b9b9b9);
-  width: 200px;
+  width: 80%;
   height: 50px;
   border: 2px solid #fff700;
 }
+button:hover {
+  cursor: pointer;
+}
 .activeButton {
   background: linear-gradient(#cfcfcf, #b9b9b9);
-}
-.buttonBox {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-hr {
-  margin-top: 20px;
-  margin-left: 5%;
-  width: 90%;
-  background-color: #fff700;
-  height: 0.25svh;
-  border: 0px;
-}
-.description {
-  margin-left: 5%;
 }
 p {
   font-size: 20px;
