--- a/src/app/lab1/lab1.component.css
+++ b/src/app/lab1/lab1.component.css
@@ -46,6 +46,9 @@ h3 {
   display: flex;
   justify-content: center;
 }
+app-run-button {
+  width: 80%;
+}
 .buttonBox {
   margin-top: 60px;
   width: 15%;
@@ -55,18 +58,6 @@ h3 {
   position: fixed;
   justify-content: center;
   align-content: space-between;
-}
-button {
-  background: linear-gradient(#797979, #b9b9b9);
-  width: 80%;
-  height: 50px;
-  border: 2px solid #fff700;
-}
-button:hover {
-  cursor: pointer;
-}
-.activeButton {
-  background: linear-gradient(#cfcfcf, #b9b9b9);
 }
 p {
   font-size: 20px;
