add chceckbox select chart

--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -7,9 +7,28 @@ section {
   display: flex;
   flex-wrap: wrap;
 }
+.checkboxArticle {
+  width: 100%;
+}
+ul {
+  list-style: none;
+}
+li {
+  margin-top: 10px;
+}
+label {
+  margin-left: 2%;
+}
+label:hover {
+  cursor: pointer;
+}
+h2 {
+  font-size: 1em;
+}
 .chartArticle {
   width: 80%;
 }
+
 .buttonArticle {
   width: 19%;
 }
@@ -24,7 +43,9 @@ section {
   display: flex;
   justify-content: center;
 }
-
+.disactiveChart {
+  display: none;
+}
 .buttonBox {
   margin-top: 60px;
   width: 15%;
