--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -35,6 +35,7 @@ h2 {
 .descriptionArticle {
   border-top: 2px solid #fff700;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .chartBox {
@@ -43,8 +44,13 @@ h2 {
   display: flex;
   justify-content: center;
 }
+aside {
+  max-height: 500px;
+}
 .disactiveChart {
-  display: none;
+  overflow: hidden;
+  max-height: 0;
+  transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 .buttonBox {
   margin-top: 60px;
@@ -59,11 +65,16 @@ h2 {
 app-run-button {
   width: 80%;
 }
+h4 {
+  margin-top: 10px;
+  font-size: 2em;
+}
 p {
   font-size: 20px;
   margin: 10px 0%;
 }
-ul {
+aside ul {
+  list-style: circle;
   list-style-position: inside;
   font-size: 20px;
 }
