--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <app-lab1 *ngSwitchCase="1" />
     <app-lab2 *ngSwitchCase="2" />
     <app-lab3 *ngSwitchCase="3" />
+    <app-lab4 *ngSwitchCase="4" />
   </section>
 </main>
 
