--- a/src/app/show-button/show-button.component.html
+++ b/src/app/show-button/show-button.component.html
@@ -1,3 +1,3 @@
 <button (click)="showHide()">
-  <img src="../../assets/arrow.png" alt="arrow" [ngClass]="{ show: isShow }" />
+  <img src="/assets/arrow.png" alt="arrow" [ngClass]="{ show: isShow }" />
 </button>
