add chart setting

--- a/src/app/lab1/lab1.component.html
+++ b/src/app/lab1/lab1.component.html
@@ -31,6 +31,7 @@
     <div class="chartBox">
       <canvas id="canvas">{{ chart }}</canvas>
     </div>
+    <app-change-form (FormEiit)="saveFormData($event, 0)" />
   </article>
   <article class="buttonArticle">
     <div class="buttonBox">
