change chart structure

--- a/src/app/lab1/lab1.component.html
+++ b/src/app/lab1/lab1.component.html
@@ -29,7 +29,7 @@
   </article>
   <article class="chartArticle">
     <div class="chartBox">
-      <canvas id="canvas">{{ chart }}</canvas>
+      <canvas id="canvas">{{ chart[0] }}</canvas>
     </div>
     <app-change-form (FormEiit)="saveFormData($event, 0)" />
   </article>
