--- a/src/app/lab4/lab4.component.html
+++ b/src/app/lab4/lab4.component.html
@@ -180,43 +180,43 @@
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[0].show != true }"
     >
-      <canvas id="canvas0">{{ chart0 }}</canvas>
+      <canvas id="canvas0">{{ chart[0] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[1].show != true }"
     >
-      <canvas id="canvas1">{{ chart1 }}</canvas>
+      <canvas id="canvas1">{{ chart[1] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[2].show != true }"
     >
-      <canvas id="canvas2">{{ chart2 }}</canvas>
+      <canvas id="canvas2">{{ chart[2] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[3].show != true }"
     >
-      <canvas id="canvas3">{{ chart3 }}</canvas>
+      <canvas id="canvas3">{{ chart[3] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[4].show != true }"
     >
-      <canvas id="canvas4">{{ chart4 }}</canvas>
+      <canvas id="canvas4">{{ chart[4] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[5].show != true }"
     >
-      <canvas id="canvas5">{{ chart5 }}</canvas>
+      <canvas id="canvas5">{{ chart[5] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[6].show != true }"
     >
-      <canvas id="canvas6">{{ chart6 }}</canvas>
+      <canvas id="canvas6">{{ chart[6] }}</canvas>
     </div>
     <div
       class="chartBox"
@@ -228,7 +228,7 @@
           showChart[10].show != true
       }"
     >
-      <canvas id="canvas7">{{ chart7 }}</canvas>
+      <canvas id="canvas7">{{ chart[7] }}</canvas>
     </div>
     <div
       class="chartBox"
@@ -239,7 +239,7 @@
           showChart[13].show != true
       }"
     >
-      <canvas id="canvas8">{{ chart8 }}</canvas>
+      <canvas id="canvas8">{{ chart[8] }}</canvas>
     </div>
   </article>
   <article class="buttonArticle">
