--- a/src/app/lab2/lab2.component.html
+++ b/src/app/lab2/lab2.component.html
@@ -43,19 +43,19 @@
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[0].show != true }"
     >
-      <canvas id="canvas">{{ chart }}</canvas>
+      <canvas id="canvas">{{ chart[0] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[1].show != true }"
     >
-      <canvas id="canvas2">{{ chart2 }}</canvas>
+      <canvas id="canvas2">{{ chart[1] }}</canvas>
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[2].show != true }"
     >
-      <canvas id="canvas3">{{ chart3 }}</canvas>
+      <canvas id="canvas3">{{ chart[2] }}</canvas>
     </div>
   </article>
   <article class="buttonArticle">
