--- a/src/app/lab4/lab4.component.css
+++ b/src/app/lab4/lab4.component.css
@@ -60,9 +60,10 @@ app-run-button {
 }
 .chartBox {
   width: 100%;
-  height: 70svh;
+  height: 80svh;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .disactiveChart {
   display: none;
