--- a/src/app/change-form/change-form.component.html
+++ b/src/app/change-form/change-form.component.html
@@ -1,15 +1,23 @@
 <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
   <div>
     <label for="yStart">Oś Y Start:</label>
-    <input type="number" id="yStart" formControlName="yStart" required />
+    <input
+      type="number"
+      id="yStart"
+      formControlName="yStart"
+      required
+      value="10"
+    />
   </div>
   <div>
     <label for="yStop">Oś Y Stop:</label>
-    <input type="number" id="yStop" formControlName="yStop" required />
-  </div>
-  <div>
-    <label for="xLength">Oś X:</label>
-    <input type="number" id="xLength" formControlName="xLength" required />
+    <input
+      type="number"
+      id="yStop"
+      formControlName="yStop"
+      required
+      value="0"
+    />
   </div>
   <button type="submit">Wyślij</button>
 </form>
