--- a/src/app/lab1/lab1.component.css
+++ b/src/app/lab1/lab1.component.css
@@ -42,9 +42,10 @@ h3 {
 }
 .chartBox {
   width: 100%;
-  height: 70svh;
+  height: 80svh;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 app-run-button {
   width: 80%;
