--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -40,9 +40,10 @@ h2 {
 
 .chartBox {
   width: 100%;
-  height: 70svh;
+  height: 80svh;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 aside {
   max-height: 500px;
