--- a/src/app/lab4/lab4.component.html
+++ b/src/app/lab4/lab4.component.html
@@ -181,42 +181,49 @@
       [ngClass]="{ disactiveChart: showChart[0].show != true }"
     >
       <canvas id="canvas0">{{ chart[0] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 0)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[1].show != true }"
     >
       <canvas id="canvas1">{{ chart[1] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 1)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[2].show != true }"
     >
       <canvas id="canvas2">{{ chart[2] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 2)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[3].show != true }"
     >
       <canvas id="canvas3">{{ chart[3] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 3)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[4].show != true }"
     >
       <canvas id="canvas4">{{ chart[4] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 4)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[5].show != true }"
     >
       <canvas id="canvas5">{{ chart[5] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 5)" />
     </div>
     <div
       class="chartBox"
       [ngClass]="{ disactiveChart: showChart[6].show != true }"
     >
       <canvas id="canvas6">{{ chart[6] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 6)" />
     </div>
     <div
       class="chartBox"
@@ -229,6 +236,7 @@
       }"
     >
       <canvas id="canvas7">{{ chart[7] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 7)" />
     </div>
     <div
       class="chartBox"
@@ -240,6 +248,7 @@
       }"
     >
       <canvas id="canvas8">{{ chart[8] }}</canvas>
+      <app-change-form (FormEiit)="saveFormData($event, 8)" />
     </div>
   </article>
   <article class="buttonArticle">
