--- a/src/app/lab2/lab2.component.css
+++ b/src/app/lab2/lab2.component.css
@@ -30,6 +30,7 @@ h2 {
 }
 .buttonArticle {
   width: 19%;
+  padding-bottom: 200px;
 }
 .descriptionArticle {
   border-top: 2px solid #fff700;
@@ -47,11 +48,12 @@ h2 {
 }
 .buttonBox {
   margin-top: 60px;
-  width: 15%;
+  top: 200px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   height: 50svh;
-  position: fixed;
+  position: sticky;
   justify-content: center;
   align-content: space-between;
 }
