--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -31,6 +31,7 @@ h2 {
 
 .buttonArticle {
   width: 19%;
+  padding-bottom: 200px;
 }
 .descriptionArticle {
   border-top: 2px solid #fff700;
@@ -55,11 +56,12 @@ aside {
 }
 .buttonBox {
   margin-top: 60px;
-  width: 15%;
+  top: 200px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   height: 50svh;
-  position: fixed;
+  position: sticky;
   justify-content: center;
   align-content: space-between;
 }
