--- a/src/app/lab4/lab4.component.css
+++ b/src/app/lab4/lab4.component.css
@@ -89,6 +89,11 @@ aside {
   max-height: 0;
   transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
+.descriptionArticle {
+  border-top: 2px solid #fff700;
+  width: 100%;
+  margin-bottom: 20px;
+}
 h4 {
   margin-top: 10px;
   font-size: 2em;
@@ -96,4 +101,13 @@ h4 {
 p {
   font-size: 20px;
   margin: 10px 0%;
+}
+aside ul {
+  list-style: circle;
+  list-style-position: inside;
+  font-size: 20px;
+}
+.formArticle {
+  width: 100%;
+  margin-bottom: 50px;
 }
