--- a/src/app/lab3/lab3.component.html
+++ b/src/app/lab3/lab3.component.html
@@ -1,6 +1,6 @@
-<h1>Laboratorium 35</h1>
+<!-- <h1>Laboratorium 35</h1> -->
 <section>
-  <article class="checkboxArticle">
+  <!-- <article class="checkboxArticle">
     <h2>Wybierz wyświetlane wykresy:</h2>
     <ul>
       <li>
@@ -26,6 +26,9 @@
         <label for="V">Wykres prędkości</label>
       </li>
     </ul>
+  </article> -->
+  <article class="formArticle">
+    <app-lab3-form />
   </article>
   <article class="chartArticle">
     <div
@@ -85,9 +88,5 @@
         jeden obrót i otrzymaliśmy 1250
       </p>
     </aside>
-  </article>
-  <article class="formArticle">
-    <h4>Kalkulator wartości:</h4>
-    <app-lab3-form />
   </article>
 </section>
