--- a/src/app/lab3-form/lab3-form.component.css
+++ b/src/app/lab3-form/lab3-form.component.css
@@ -1,26 +1,90 @@
 section {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
 }
-
+h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 25px;
+}
 form {
-  width: 30%;
+  width: 60%;
+  display: flex;
+  flex-wrap: wrap;
+}
+h3 {
+  width: 50%;
+  text-align: center;
+  font-size: 1.5em;
 }
 form div {
+  width: 50%;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin: 15px 0px;
 }
-ul {
-  margin-left: 100px;
-  list-style: none;
+input {
+  height: 25px;
+  width: 50%;
+}
+label {
+  line-height: 25px;
+  width: 50%;
+  text-align: center;
+}
+button {
+  margin-left: 40%;
   width: 20%;
+  height: 30px;
+  background: linear-gradient(#797979, #b9b9b9);
+  border: 2px solid #fff700;
 }
-li {
-  width: 100%;
+button:hover {
+  cursor: pointer;
+  background: linear-gradient(#cfcfcf, #b9b9b9);
+}
+.switchToggle {
+  width: 40%;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  margin-bottom: 10px;
+  justify-content: center;
+  align-content: center;
+}
+.switchToggle input {
+  display: none;
+}
+.switch {
+  width: 104px;
+  height: 44px;
+  background: linear-gradient(#797979, #b9b9b9);
+  border-radius: 22px;
+  border: 2px solid #fff700;
+}
+span {
+  margin: 4px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: linear-gradient(#cfcfcf, #b9b9b9);
+  border-radius: 18px;
+  transition: 0.5s ease-in-out;
+  border: 2px solid #fff700;
+}
+span:hover {
+  cursor: pointer;
+}
+.active {
+  transition: 0.5s ease-in-out;
+  -webkit-transform: translateX(60px);
+  -ms-transform: translateX(60px);
+  transform: translateX(60px);
+}
+h4 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.25em;
 }
