change lab3 Form

--- a/src/app/lab3/lab3.component.html
+++ b/src/app/lab3/lab3.component.html
@@ -28,7 +28,7 @@
     </ul>
   </article> -->
   <article class="formArticle">
-    <app-lab3-form />
+    <app-lab3-form (FormLab3Eiit)="saveForm($event)" />
   </article>
   <article class="chartArticle">
     <div
