--- a/src/app/lab1/lab1.component.css
+++ b/src/app/lab1/lab1.component.css
@@ -1,8 +1,5 @@
-h1 {
-  text-align: center;
-  font-size: 60px;
-}
 section {
+  margin-top: 60px;
   padding-left: 5%;
   display: flex;
   flex-wrap: wrap;
@@ -64,6 +61,8 @@ app-run-button {
 }
 aside {
   max-height: 500px;
+  margin-bottom: 30px;
+  transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 .disactiveChart {
   overflow: hidden;
@@ -71,10 +70,10 @@ aside {
   transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 h4 {
-  margin-top: 10px;
+  margin-top: 30px;
   font-size: 2em;
 }
 p {
   font-size: 20px;
-  margin: 10px 0%;
+  margin: 20px 0%;
 }
