--- a/src/app/lab2/lab2.component.css
+++ b/src/app/lab2/lab2.component.css
@@ -1,11 +1,9 @@
-h1 {
-  text-align: center;
-  font-size: 60px;
-}
 section {
+  margin-top: 60px;
   padding-left: 5%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .checkboxArticle {
   width: 100%;
@@ -35,6 +33,7 @@ h2 {
 .descriptionArticle {
   border-top: 2px solid #fff700;
   width: 100%;
+  margin-bottom: 30px;
 }
 .chartBox {
   width: 100%;
@@ -62,6 +61,7 @@ app-run-button {
 }
 aside {
   max-height: 500px;
+  transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 .disactiveChart {
   overflow: hidden;
@@ -69,10 +69,10 @@ aside {
   transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 h4 {
-  margin-top: 10px;
+  margin-top: 30px;
   font-size: 2em;
 }
 p {
   font-size: 20px;
-  margin: 10px 0%;
+  margin-top: 20px;
 }
