--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -1,7 +1,3 @@
-h1 {
-  text-align: center;
-  font-size: 60px;
-}
 section {
   padding-left: 5%;
   display: flex;
@@ -42,7 +38,7 @@ h2 {
 .descriptionArticle {
   border-top: 2px solid #fff700;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .chartBox {
@@ -54,6 +50,7 @@ h2 {
 }
 aside {
   max-height: 500px;
+  transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 .disactiveChart {
   overflow: hidden;
@@ -75,13 +72,14 @@ app-run-button {
   width: 80%;
 }
 h4 {
-  margin-top: 10px;
+  margin-top: 30px;
   font-size: 2em;
 }
 p {
   font-size: 20px;
-  margin: 10px 0%;
+  margin-top: 20px;
 }
+
 aside ul {
   list-style: circle;
   list-style-position: inside;
