--- a/src/app/lab4/lab4.component.css
+++ b/src/app/lab4/lab4.component.css
@@ -1,8 +1,5 @@
-h1 {
-  text-align: center;
-  font-size: 60px;
-}
 section {
+  margin-top: 60px;
   padding-left: 5%;
   display: flex;
   flex-wrap: wrap;
@@ -83,6 +80,7 @@ app-run-button {
 }
 aside {
   max-height: 500px;
+  transition: all 0.45s cubic-bezier(0.44, 0.99, 0.48, 1);
 }
 .disactiveChart {
   overflow: hidden;
@@ -92,15 +90,15 @@ aside {
 .descriptionArticle {
   border-top: 2px solid #fff700;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 h4 {
-  margin-top: 10px;
+  margin-top: 30px;
   font-size: 2em;
 }
 p {
   font-size: 20px;
-  margin: 10px 0%;
+  margin-top: 20px;
 }
 aside ul {
   list-style: circle;
