change lab 3, change chart

--- a/src/app/lab3/lab3.component.css
+++ b/src/app/lab3/lab3.component.css
@@ -30,7 +30,9 @@ h2 {
 .chartArticle {
   width: 80%;
 }
-
+.disactiveChart {
+  display: none;
+}
 .buttonArticle {
   width: 19%;
   padding-bottom: 200px;
