--- a/src/app/lab3-form/lab3-form.component.css
+++ b/src/app/lab3-form/lab3-form.component.css
@@ -22,9 +22,6 @@ h3 {
 }
 form div {
   width: 50%;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
   margin: 15px 0px;
 }
 input {
@@ -32,6 +29,7 @@ input {
   width: 50%;
 }
 label {
+  margin-left: 20%;
   line-height: 25px;
   width: 50%;
   text-align: center;
@@ -88,4 +86,8 @@ h4 {
   text-align: center;
   margin-bottom: 20px;
   font-size: 1.25em;
+}
+.showInput {
+  display: none;
+  background-color: #fff700;
 }
